added attribution to all files

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,12 @@
+<!-- Title: index
+Author: Megan Walker, Ngi Bujri, Caitlynne Johnson
+Date: 09-14-2023
+Description: Index page
+Source: Professor Krasso, Angular.io
+ -->
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Bob's Computer Repair Shop</title>
@@ -8,7 +15,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
